# gemian-setup

./: .gitignore  CMakeLists.txt  README.md  gemian_setup.cpp  locales_identification.cpp  locales_identification.h  para_variables.cpp  para_variables.h
debian/: changelog  control  copyright  gemian-setup.service  rules
test/: CMakeLists.txt  test_keyboard_selection.cpp  test_locales_identification.cpp
